<resources>
    <string name="app_name">ConversationalIST</string>
    <string name="enter_username">Enter Username</string>
    <string name="conversationalist">ConversationalIST</string>
    <string name="login">Login</string>
    <string name="ist_logo">IST Logo</string>
    <string name="password">Password</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="quit">Quit</string>
    <string name="register">Register</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="salas_de_conversacao">Salas de Conversação</string>
    <string name="send_grpc_request">Send Grpc Request</string>
    <string name="response">Response:</string>
    <string name="cmu_chat">CMU Chat</string>
    <string name="create_new_chatroom">Create New Chatroom</string>
    <string name="criar_nova_sala_de_conversacao">Criar nova Sala de Conversação</string>
    <string name="name_default">name_default</string>
    <string name="default_timestamp">default_timestamp</string>
    <string name="image">Image</string>
    <string name="message_default">message_default</string>
    <string name="send_text">Send Text</string>
    <string name="enviar_texto">Enviar Texto</string>
    <string name="send_photo">Send Photo</string>
    <string name="enviar_foto">Enviar fotografia</string>
    <string name="send_geolocation">Send Geolocation</string>
    <string name="enviar_geolocalizacao">Enviar Geolocalização</string>
    <string name="aa">Aa</string>
    <string name="geofenced_chat">Geofenced</string>
    <string name="private_chat">Private</string>
    <string name="public_chat">Public</string>
    <string name="radius">Radius:</string>
    <string name="login_or_register">Login or Register</string>
    <string name="join_new_chatroom">Join New Chatroom</string>
    <string name="entrar_em_nova_sala_de_conversacao">Entrar em nova Sala de Conversação</string>
    <string name="create">Create</string>
    <string name="name">Name:</string>
    <string name="set">Set</string>
    <string name="location">Location:</string>
    <string name="chat_type">Chat Type:</string>
    <string name="join">Join</string>
    <string name="share_link">Share link</string>
    <string name="partilhar_hiperligacao">Partilhar hiperligação</string>
    <string name="language">Language</string>
    <string name="select">Select</string>
    <string name="selecionar">Selecionar</string>
    <string name="linguagem">Linguagem</string>
    <string name="login_ou_registar">Login ou Registar</string>
    <string name="nome_utilizador">Nome de Utilizador</string>
    <string name="tentativas">Tentativas Restantes:</string>
    <string name="registar">Registar</string>
    <string name="sair">Sair</string>
    <string name="field_missing">Username or Password fields missing</string>
    <string name="campo_em_falta">Nome de Utilizador ou Password em falta</string>
    <string name="_3">3</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="start">Start as Guest</string>
    <string name="iniciar">Iniciar como Convidado</string>
    <string name="juntar">Juntar</string>
    <string name="criar">Criar</string>
    <string name="chat_tipo">Tipo de chat:</string>
    <string name="nome">Nome:</string>
    <string name="chat_publico">Público</string>
    <string name="chat_privado">Privado</string>
    <string name="chat_limite_geografico">Limitado Geograficamente</string>
    <string name="definir">Definir</string>
    <string name="localizacao">Localização:</string>
    <string name="raio">Raio:</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="melhorar_conta">Melhorar Conta</string>
    <string name="add_user">Add_user</string>
    <string name="adicionar">Adicionar</string>
    <string name="remover">Remover</string>
    <string name="adicionar_utilizador">Adicionar Utilizador</string>
    <string name="upgrade">Upgrade</string>
    <string name="melhorar">Melhorar</string>
    <string name="leave">Leave</string>
    <string name="manage">Manage</string>
    <string name="gerir">Gerir</string>
</resources>