<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" tools:context = ".activities.LoginActivity">

    <TextView android:text = "@string/login_or_register" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/activity_title"
        android:textSize = "20sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_title"
        android:layout_centerHorizontal="true"
        android:text="@string/conversationalist"
        android:textColor="#689F38"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:autofillHints=""
        android:focusable="true"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#AB47BC" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="69dp"
        android:contentDescription="@string/ist_logo"
        android:src="@drawable/ist_logo" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_edit_text"
        android:layout_alignEnd="@+id/user_name_edit_text"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#ffff299f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempts_left"
        android:id="@+id/attempts_left_text_view"
        android:layout_below="@+id/password_edit_text"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:id="@+id/attempts_left_number_text_view"
        android:layout_alignTop="@+id/attempts_left_text_view"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/attempts_left_text_view"
        android:layout_toEndOf="@+id/activity_title"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_toStartOf="@+id/activity_title"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-120dp"
        android:layout_toStartOf="@+id/activity_title"
        android:onClick="register"
        android:text="@string/register" />

    <Button
        android:id="@+id/login_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-110dp"
        android:layout_marginBottom="80dp"
        android:layout_toStartOf="@+id/activity_title"
        android:onClick="login_as_guest"
        android:text="@string/start" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/activity_title"
        android:text="@string/quit" />

</RelativeLayout>