<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/aa"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendText"
        android:text="@string/send_text" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showCamera"
        android:text="@string/send_photo" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showMap"
        android:text="@string/send_geolocation" />

    <Button
        android:id="@+id/share_link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendLink"
        android:text="@string/share_link" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_button" />

</LinearLayout>