<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" tools:context = ".activities.ChatroomActivity"
    android:id="@+id/relativeLayout">

    <TextView android:text = "@string/chatrooms" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/activity_title"
        android:textSize = "20sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_title"
        android:layout_centerHorizontal="true"
        android:text="@string/conversationalist"
        android:textColor="#689F38"
        android:textSize="30sp" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/username"
        android:layout_below = "@+id/app_name"
        android:layout_centerHorizontal = "true"
        android:textColor = "#009688"
        android:textSize = "25sp" />

    <Button
        android:id="@+id/join_new_chatroom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:onClick="joinChatroom"
        android:text="@string/join_new_chatroom" />

    <Button
        android:id="@+id/upgrade_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="113dp"
        android:onClick="upgradeAccount"
        android:text="@string/upgrade_account" />

    <Button
        android:id="@+id/create_new_chatroom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="createChatroom"
        android:text="@string/create_new_chatroom" />

    <ListView
        android:id="@+id/my_chat_list"
        android:layout_width="wrap_content"
        android:layout_height="323dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="224dp" />

</RelativeLayout>